[package]
name = "advent_of_code_2016"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "1.9"
itertools = "0.8"
nom = "5.0"
num-traits = "0.2"
md5 = "0.7"

[dependencies.aoc_proc_macro]
path = "./proc_macro"
