[package]
name = "advent_of_code_2016"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bitvec = "1.0"
crossterm = "0.23"
itertools = "0.10"
nom = "7.1"
num = "0.4"
num_cpus = "1.11"
md5 = "0.7"

[dependencies.aoc_proc_macro]
path = "./proc_macro"
